Firefox permissions fixed Car Zoom Car rotation Track design altered Lap times removed Car removed in tutorials UI BG shadow taken off in game text Car vibrates on idle

--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,11 @@
     #ctaClose_dc:hover b {
       border: 1px solid lightgrey; }
 
-#ytClose_dc {
-  position: absolute;
-  top: 0px !important;
-  left: 896px !important; }
-
+/* #ytClose_dc {
+	position: absolute;
+	top: 0px !important;
+	left: 896px !important;
+} */
 * {
   -moz-user-select: -moz-none;
   -ms-user-select: none;
