--- a/mouse-out-requirement/css/style.css
+++ b/mouse-out-requirement/css/style.css
@@ -6,14 +6,14 @@
   position: absolute;
   background-color: black;
   overflow: hidden;
-  border: 1px solid white; }
+  border: 1px solid darkgrey; }
 
 /* Collapsed Panel*/
 #collapsed-panel {
   top: 0px;
   left: 0px;
-  width: 970px;
-  height: 250px;
+  width: 968px;
+  height: 248px;
   position: absolute;
   background: url("../images/bg-collapsed.jpg");
   overflow: hidden; }
@@ -29,8 +29,8 @@
 #expanded-panel {
   left: 0px;
   top: 0px;
-  width: 970;
-  height: 250px;
+  width: 968px;
+  height: 498px;
   position: absolute;
   display: none;
   overflow: hidden; }
