--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 #main-panel {
   top: 0px;
   left: 0px;
-  width: 970px;
-  height: 250px;
+  width: 968px;
+  height: 248px;
   position: absolute;
   background-color: black;
-  overflow: hidden; }
+  overflow: hidden;
+  border: 1px solid darkgrey; }
 
 /* Collapsed Panel*/
 #collapsed-panel {
@@ -13,7 +14,6 @@
   left: 0px;
   width: 968px;
   height: 248px;
-  border: 1px solid #000;
   position: absolute;
   background: url("../images/bg-collapsed.jpg");
   overflow: hidden; }
@@ -31,15 +31,14 @@
   top: 0px;
   width: 968px;
   height: 498px;
-  border: 1px solid #000;
   position: absolute;
   display: none;
   overflow: hidden; }
 
 #ctaClose_dc {
   cursor: pointer;
-  left: 3px;
-  top: 3px;
+  left: 5px;
+  top: 5px;
   position: absolute;
   font-family: arial, sans-serif;
   font-size: 11px;
@@ -110,7 +109,7 @@
 #view-instructions, #ready, .instructions, #race-starter-bg {
   z-index: 22; }
 
-#ready-1, #ready-2, #ready-3, #go, #nice-driving, .tick-circle, .tick-tick {
+#ready-1, #ready-2, #ready-3, #go, #nice-driving, .move-complete {
   z-index: 23; }
 
 #inputVideo, #motion-track-overlay, #outputVideo {
@@ -179,9 +178,8 @@
   #game-hud #gold, #game-hud #silver, #game-hud #bronze {
     position: absolute;
     left: 50%;
-    width: 80px;
-    margin-left: -40px;
-    top: 80px; }
+    margin-left: -90px;
+    top: 110px; }
   #game-hud .hud-item, #game-hud .race-starter, #game-hud #race-starter-bg, #game-hud .hud-lap, #game-hud #nice-driving {
     position: absolute; }
   #game-hud .hud-lap {
@@ -203,6 +201,14 @@
     left: 48px;
     bottom: 12px;
     cursor: pointer; }
+  #game-hud #hud-lap-time {
+    position: absolute;
+    top: 103px;
+    left: 10px;
+    color: white;
+    font-size: 26px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold; }
   #game-hud .race-starter {
     top: 112px;
     left: 50%;
@@ -210,7 +216,7 @@
     #game-hud .race-starter#go {
       margin-left: -95px; }
   #game-hud #nice-driving {
-    top: 213px;
+    top: 190px;
     left: 50%;
     margin-left: -173px; }
   #game-hud #race-starter-bg {
@@ -311,13 +317,14 @@
     left: 0;
     width: 100%;
     height: 100%; }
-  #view-instructions .tick-circle, #view-instructions .tick-tick {
+  #view-instructions .move-complete {
     position: absolute;
-    top: 145px;
-    left: 50%;
-    margin-left: -70px;
-    width: 140px;
-    opacity: 0; }
+    top: 168px;
+    left: 50%; }
+    #view-instructions .move-complete#move-left-complete {
+      margin-left: -49px; }
+    #view-instructions .move-complete#move-right-complete {
+      margin-left: -37px; }
   #view-instructions #move-right-text, #view-instructions #move-left-text {
     position: absolute;
     top: 128px;
