--- a/css/style.css
+++ b/css/style.css
@@ -137,12 +137,14 @@
 	font-style: normal
 }
 */
-#expanded-panel .top-gradient {
-  top: 0px;
-  left: 0px;
-  position: absolute;
-  width: 100%;
-  height: 122px; }
+#expanded-panel {
+  -webkit-transform: translate3d(0, 0, 0); }
+  #expanded-panel .top-gradient {
+    top: 0px;
+    left: 0px;
+    position: absolute;
+    width: 100%;
+    height: 122px; }
 
 #collapsed-panel {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
