--- a/css/style.css
+++ b/css/style.css
@@ -147,8 +147,8 @@
     height: 122px; }
 
 #collapsed-panel {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0; }
+  opacity: 0;
+  filter: alpha(opacity=0); }
   #collapsed-panel #tag-line {
     position: absolute;
     top: 70px;
@@ -159,8 +159,8 @@
     right: 50px; }
 
 #abarth-logo {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
+  filter: alpha(opacity=0);
   position: absolute;
   bottom: 20px;
   right: 20px;
@@ -240,8 +240,8 @@
   -ms-transform: scaleX(-1);
   transform: scaleX(-1);
   border: 1px solid white;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0; }
+  opacity: 0;
+  filter: alpha(opacity=0); }
 
 #motion-control-helper {
   width: 160px;
@@ -249,8 +249,8 @@
   position: absolute;
   right: 10px;
   top: 30px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
+  filter: alpha(opacity=0);
   display: none; }
   #motion-control-helper #motion-line {
     position: absolute;
@@ -262,8 +262,8 @@
   #motion-control-helper .motion-area {
     position: absolute;
     top: 0;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
     opacity: 0.5;
+    filter: alpha(opacity=50);
     height: 120px; }
   #motion-control-helper #left-motion-area {
     left: 0;
@@ -283,8 +283,8 @@
 
 .view {
   display: none;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
+  filter: alpha(opacity=0);
   width: 968px;
   height: 498px;
   position: absolute;
@@ -316,8 +316,8 @@
 #view-instructions {
   background: rgba(0, 0, 0, 0.7); }
   #view-instructions .instructions {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
     opacity: 0;
+    filter: alpha(opacity=0);
     position: absolute;
     top: 0;
     left: 0;
@@ -345,15 +345,15 @@
     left: 50%;
     margin-left: -43px; }
   #view-instructions #how-to-play {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
     opacity: 0;
+    filter: alpha(opacity=0);
     position: absolute;
     top: 66px;
     left: 50%;
     margin-left: -162px; }
   #view-instructions #options-header {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
     opacity: 0;
+    filter: alpha(opacity=0);
     position: absolute;
     top: 66px;
     left: 50%;
@@ -364,8 +364,8 @@
     left: 50%;
     margin-left: -200px; }
   #view-instructions .options-cta {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
     opacity: 0;
+    filter: alpha(opacity=0);
     cursor: pointer;
     top: 315px; }
   #view-instructions #resume {
@@ -414,8 +414,8 @@
     position: absolute;
     top: 300px;
     left: 50%;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-    opacity: 0; }
+    opacity: 0;
+    filter: alpha(opacity=0); }
   #view-instructions #car-straight {
     margin-left: -115px;
     width: 230px; }
