--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@
 
 #collapsed-panel {
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0); }
   #collapsed-panel #tag-line {
     position: absolute;
@@ -160,6 +161,7 @@
 
 #abarth-logo {
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
   position: absolute;
   bottom: 20px;
@@ -241,6 +243,7 @@
   transform: scaleX(-1);
   border: 1px solid white;
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0); }
 
 #motion-control-helper {
@@ -250,6 +253,7 @@
   right: 10px;
   top: 30px;
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
   display: none; }
   #motion-control-helper #motion-line {
@@ -263,6 +267,7 @@
     position: absolute;
     top: 0;
     opacity: 0.5;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=50);
     height: 120px; }
   #motion-control-helper #left-motion-area {
@@ -284,6 +289,7 @@
 .view {
   display: none;
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
   width: 968px;
   height: 498px;
@@ -317,6 +323,7 @@
   background: rgba(0, 0, 0, 0.7); }
   #view-instructions .instructions {
     opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
     position: absolute;
     top: 0;
@@ -346,6 +353,7 @@
     margin-left: -43px; }
   #view-instructions #how-to-play {
     opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
     position: absolute;
     top: 66px;
@@ -353,6 +361,7 @@
     margin-left: -162px; }
   #view-instructions #options-header {
     opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
     position: absolute;
     top: 66px;
@@ -365,6 +374,7 @@
     margin-left: -200px; }
   #view-instructions .options-cta {
     opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
     cursor: pointer;
     top: 315px; }
@@ -415,6 +425,7 @@
     top: 300px;
     left: 50%;
     opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0); }
   #view-instructions #car-straight {
     margin-left: -115px;
