--- a/game-only/css/style.css
+++ b/game-only/css/style.css
@@ -1,76 +1,12 @@
 #main-panel {
   top: 0px;
   left: 0px;
-  width: 968px;
-  height: 248px;
+  width: 970px;
+  height: 500px;
   position: absolute;
   background-color: black;
-  overflow: hidden;
-  border: 1px solid black; }
-
-/* Collapsed Panel*/
-#collapsed-panel {
-  top: 0px;
-  left: 0px;
-  width: 968px;
-  height: 248px;
-  position: absolute;
-  background: url("../images/bg-collapsed.jpg");
   overflow: hidden; }
 
-#ctaExpand_dc {
-  right: 160px;
-  top: 150px;
-  position: absolute;
-  z-index: 10;
-  cursor: pointer; }
-
-/*Expanded Panel*/
-#expanded-panel {
-  left: 0px;
-  top: 0px;
-  width: 968px;
-  height: 498px;
-  position: absolute;
-  display: none;
-  overflow: hidden; }
-
-#ctaClose_dc {
-  cursor: pointer;
-  left: 5px;
-  top: 5px;
-  position: absolute;
-  font-family: arial, sans-serif;
-  font-size: 11px;
-  letter-spacing: 0.4px;
-  color: gray;
-  -moz-transition: 0.3s;
-  -o-transition: 0.3s;
-  -webkit-transition: 0.3s;
-  transition: 0.3s; }
-  #ctaClose_dc span {
-    text-decoration: underline; }
-  #ctaClose_dc b {
-    -moz-transition: 0.3s;
-    -o-transition: 0.3s;
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-    border: 1px solid gray;
-    padding: 1px 3px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-    font-size: 10px; }
-  #ctaClose_dc:hover {
-    color: lightgrey; }
-    #ctaClose_dc:hover b {
-      border: 1px solid lightgrey; }
-
-/* #ytClose_dc {
-	position: absolute;
-	top: 0px !important;
-	left: 896px !important;
-} */
 * {
   -moz-user-select: -moz-none;
   -ms-user-select: none;
@@ -165,8 +101,7 @@
   filter: alpha(opacity=0);
   position: absolute;
   bottom: 20px;
-  right: 20px;
-  cursor: pointer; }
+  right: 20px; }
 
 #fps {
   position: absolute;
@@ -175,8 +110,8 @@
 
 #game-hud {
   position: absolute;
-  width: 968px;
-  height: 498px;
+  width: 970px;
+  height: 500px;
   top: 0;
   left: 0; }
   #game-hud #gold, #game-hud #silver, #game-hud #bronze {
@@ -295,8 +230,8 @@
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
-  width: 968px;
-  height: 498px;
+  width: 970px;
+  height: 500px;
   position: absolute;
   top: 0;
   left: 0; }
@@ -305,8 +240,8 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 968px;
-  height: 498px;
+  width: 970px;
+  height: 500px;
   background-color: #acdce6;
   moz-transform-origin: center bottom;
   -o-transform-origin: center bottom;
